@@ -10,7 +10,6 @@ import com.yahoo.tensor.serialization.JsonFormat;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.Executors;
 
@@ -25,19 +24,19 @@ class HandlerTester {
     }
 
     void assertResponse(String url, int expectedCode) {
-        assertResponse(url, Collections.emptyMap(), expectedCode, (String)null);
+        assertResponse(url, Map.of(), expectedCode, (String)null);
     }
 
     void assertResponse(String url, int expectedCode, String expectedResult) {
-        assertResponse(url, Collections.emptyMap(), expectedCode, expectedResult);
+        assertResponse(url, Map.of(), expectedCode, expectedResult);
     }
 
     void assertResponse(String url, int expectedCode, String expectedResult, Map<String, String> headers) {
-        assertResponse(url, Collections.emptyMap(), expectedCode, expectedResult, headers);
+        assertResponse(url, Map.of(), expectedCode, expectedResult, headers);
     }
 
     void assertResponse(String url, Map<String, String> properties, int expectedCode, String expectedResult) {
-        assertResponse(url, properties, expectedCode, expectedResult, Collections.emptyMap());
+        assertResponse(url, properties, expectedCode, expectedResult, Map.of());
     }
 
     void assertResponse(String url, Map<String, String> properties, int expectedCode, String expectedResult, Map<String, String> headers) {
